      http://cdash.irisa.fr/CDash/index.php?project=ViSP 
  - New Features
    - vpV4l2Grabber: Get the timestamp associated to the grabbed image.
    - vpRobotAfma6 and vpAfma6: Modifications to be compatible with the new 
      low level Adept controller provided by Cerebellum Automation.
  - Examples:
    - New examples in example/manual described in ViSP guide.

----------------------------------------------	
ViSP 2.4.2 (released March 27, 2008)
  - New classes
    - vpCalibration : calibration toolkit for intrinsic and 
        extrinsic parameters of perspective camera.
    - vpXmlParserCamera : Parser xml to read and save camera parameters 
        from vpCameraParameters class. 
    - vpHinkley : Hinkley's cumulative sum test computation.
    - vpMePath  : Tracking of a white curve by using line and parabola 
        tracker.
    - vpKeyboard : Gets a key from the keyboard without waiting for the 
        enter key.
    - vpParallelPort : Parallel port management under unix.
    - vpRingLight : Irisa's ring light controller.
    - vpKltOpencv : Interface for the KLT (Kanade-Lucas-Tomasi) feature 
        tracker implemented with opencv.
  - New Features
  - Bug fix and improvement
    - vpCameraParameters : support for radial distortion camera model.
    - vpAfma6 : Add a getCameraParameters functionnality
    - vpSimulator : either SoWin or SoQt or SoXt is needed to use 
        vpSimulator class.
    - vpDot: setMaxDotSize(double percentage) replace 
        setNbMaxPoint(double nb) to be less image size dependent.
        The maximal dot size is set by default to 0.25% (quarter image size).
        setGrayLevelPrecision(double grayLevelPrecision) has been 
        added for a better management of gray dots detection.
    - vpDot2: 
        Changes in searchDotsInArea() :
          The algorithm search now in the bounding boxes of the bad dots.
          Bug fixed : we could fall in an infinite loop.